syntax = "proto3";

package slb;

option go_package = "/slbproto";

// todo: new_sa() may call netlink UPDATE_SA, but update_sa()
// just call del() and new() sa
message AddSaReq {
  bytes host_src = 1;
  uint32 host_src_mask = 2;
  bytes host_dst = 3;
  uint32 host_dst_mask = 4;
  bytes tmpl_host_src = 5;
  bytes tmpl_host_dst = 6;
  uint32 spi = 7;
}

message DelSaReq {
  bytes host_src = 1;
  uint32 host_src_mask = 2;
  bytes host_dst = 3;
  uint32 host_dst_mask = 4;
  bytes tmpl_host_src = 5;
  bytes tmpl_host_dst = 6;
  uint32 spi = 7;
}

// The response message containing the greetings
message StatusResp {
  int64 status = 1;
}
